--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,21 @@
-# Core Data & Math
-pandas
-numpy
-scipy
+# Data & analysis
+numpy==2.3.4
+pandas==2.3.3
+scipy==1.16.3
+scikit-learn==1.7.2
+yfinance==0.2.66
+pandas-datareader==0.10.0
 
-# Plotting & Dashboard
-matplotlib
-seaborn
-streamlit
-plotly
-ipykernel       # For Jupyter Notebooks
+# Visualization
+matplotlib==3.10.7
+seaborn==0.13.2
+plotly==6.4.0
+altair==5.5.0
 
-# Optimization & Machine Learning
-scikit-learn
+# API & environment
+alpaca-py==0.43.2
+python-dotenv==1.2.1
+requests==2.32.5
 
-# API & Environment Management
-alpaca-py
-python-dotenv
-requests
-
-# Optional but useful
-yfinance         
-pandas-datareader
+# Dashboard
+streamlit==1.51.0
